--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -260,12 +260,16 @@ The functional space encompasses a region of space that is required for the obje
 
 The range space pertains to a region of space that encompass the range of a camera's view or the range of a motion sensor. For example, the range space of a camera is defined by its depth of field and angle of view. It represents the total space that is under surveillance of the camera (see figure \ref{range-space}).
 
-Artefactual extensions effect how well a design functions. For example, a sink in a bathroom has a functional space, the space in which a person occupies while washing his/her hands at the sink. If this space is interfered with by the functional or physical space of a doorway, then this will cause a circulation problems when a person is washing their hands and another person enters the bathroom.
+Artefactual extensions effect how well a design functions. For example, a sink in a bathroom has a functional space, the space a person occupies while washing his/her hands at the sink. If the functional space of the sink is interfered by (i.e., topologically overlapping) the functional and/or physical space of a doorway, this will cause a circulation problem when both the doorway and sink are simultaneously being operated, i.e., a collision between the person washing his/her hands and the doorway being opened. In this example the functional aspects of the bathrooms design with regard to the mitigation of circulation problems is directly influenced by the spatial configuration of non-physical artefactual extension of the design. 
 
 TODO: fig:sink example.
 
 \subsubsection{Spatial Abstraction for Qualitative Spatial Reasoning}
-The physical and artefactual geometries in DSpace are generally represented as polygons. However, to reason about these spatial structures in a more abstract computational framework, such as a framework for qualitative spatial reasoning, it is required that these architectural entities be spatially abstracted. This means taking into consideration what is meant by the direction of a door, or a wall as a point. How these entities are abstracted will depend on the qualitative spatial reasoning and design requirements that they are meant for. 
+The quantitative geometries of the architectural structures and their artefactual extensions are directly imported into the DSpace reasoner, via the DsSchema (more on this later). These quantitative geometries are the foundation of the multiple perceptive design representation. However, to reason about the design on a conceptual and/or qualitative level, the design must be represented from a spatial perspective at a higher level of abstraction from the quantitative geometries. 
+
+In DSpace architectural entities have spatially abstracted representations that allows DSpace to reason about the design a higher levels of abstraction. For example, DSpace uses qualitative spatial reasoning for orientation, topology, and distance constraints over the qualified spatial geometries of the design. The crux of this is that is bridges the gap between the quantified geometries and the functional / qualitative requirements of the design, thus allowing the reasoner to validate a high level requirement against its precise geometric representation. 
+
+The quantified geometries in DSpace are generally represented as polygons. However, to reason about these spatial structures in a more abstract computational framework, such as a framework for qualitative spatial reasoning, it is required that these architectural entities be spatially abstracted. This means taking into consideration what is meant by the direction of a door, or a wall as a point. How these entities are abstracted will depend on the qualitative spatial reasoning and design requirements that they are meant for. 
 
 For DSpace there are four spatial abstractions that are important: point, directed point, line, and polygon. The following section on qualitative spatial reasoning will explain how these abstractions are used in the DSpace reasoner, for now this section will focus on how specific architectural entities are transformed from their physical / structural quantitative geometries to the various spatial abstractions.
 
