--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -269,9 +269,9 @@ The quantitative geometries of the architectural structures and their artefactua
 
 In DSpace architectural entities have spatially abstracted representations that allows DSpace to reason about the design a higher levels of abstraction. For example, DSpace uses qualitative spatial reasoning for orientation, topology, and distance constraints over the qualified spatial geometries of the design. The crux of this is that is bridges the gap between the quantified geometries and the functional / qualitative requirements of the design, thus allowing the reasoner to validate a high level requirement against its precise geometric representation. 
 
-The quantified geometries in DSpace are generally represented as polygons. However, to reason about these spatial structures in a more abstract computational framework, such as a framework for qualitative spatial reasoning, it is required that these architectural entities be spatially abstracted. This means taking into consideration what is meant by the direction of a door, or a wall as a point. How these entities are abstracted will depend on the qualitative spatial reasoning and design requirements that they are meant for. 
+The quantified geometries in DSpace are generally represented as polygons. However, the qualitative spatial reasoning in DSpace requires spatial abstractions of: point, directed point, line, and convex hull. These abstract representations emerge from transformations make on the quantitative geometries. The process of abstracting an architectural entity depends on an interpretation of the intrinsic spatial nature of the entity in the context of the building. For example, the representation of a doorway as a directed point depends on the interpretation of the intrinsic direction of the doorway as well as its' abstraction as a point. 
 
-For DSpace there are four spatial abstractions that are important: point, directed point, line, and polygon. The following section on qualitative spatial reasoning will explain how these abstractions are used in the DSpace reasoner, for now this section will focus on how specific architectural entities are transformed from their physical / structural quantitative geometries to the various spatial abstractions.
+The remainder of this section focuses on the interpretation of the intrinsic spatial nature of specific architectural entities and how they are transformed from the quantitative geometries based on the interpretation. The following section on qualitative spatial reasoning will explain how these abstraction are used in the DSpace reasoner. 
 
 TODO: fig:spatial abstractions point dir point line polygon 
 
